--- a/static/chat_page.html
+++ b/static/chat_page.html
@@ -4,16 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" /> -->
   <link rel="stylesheet" href="css/style.css">
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>ChatCord App</title>
+  <title>Destiny Team Finder</title>
 </head>
 <body>
   <div class="chat-container">
     <header class="chat-header">
       <h1 class="ml-3"><i class="fa-brands fa-dochub"></i>estiny Team Finder</h1>
-      <!-- <a href="index.html" class="btn">Leave Room</a> -->
     </header>
     <main class="chat-main">
       <div class="chat-messages">
